# frogatto

./: .cproject  .editorconfig.cfg  .gitignore  .project  AndroidAppSettings.cfg  CHANGELOG  CMakeLists.txt  INSTALL  ISSUE_TEMPLATE.md  LICENSE  MAC_APP_STORE_METADATA  Makefile  Makefile-safe  Makefile-win  Makefile.ac100  Makefile.bak  Makefile.common  Makefile.harmattan  Makefile.mac  Makefile.pandora  Mounting Miasma.cfg  README  README.md  Rakefile  SConstruct  SECURITY.md  background.cpp  background.hpp  bar-descriptor.xml  blasslybliss.cfg  build-win.sh  build.sh  cellular  chamber1.cfg  changelog.txt  character.cpp  character.hpp  character_type.cpp  character_type.hpp  characters.cfg  (+108 more)
.tx/: config
MacOS/: compiling.txt  release checklist.txt
MacOSJet/: GL  Read Me.txt  icon.icns
android/: AndroidAppSettings.cfg  mkdirs.py
cellular/: module.cfg
cube_trains/: cube-trains-resouces.rc  cube-trains-win-installer.iss  licence.txt
data/: achievements.cfg  characters.cfg  control_schemes.cfg  dialog_font.cfg  dialog_font.ja.cfg  dialog_font.ko.cfg  dialog_font.zh_CN.cfg  difficulty.cfg  editor-tools.cfg  editor.cfg  fonts.cfg  fonts.ja.cfg  fonts.ko.cfg  fonts.zh_CN.cfg  forest-tree-background.cfg  framed-gui-elements.cfg  functions-custom.cfg  functions-geometry.cfg  functions-list.cfg  functions-math.cfg  functions-time.cfg  functions.cfg  geometry-functions.cfg  gui-elements.cfg  gui.cfg  items.cfg  label_font.cfg  label_font.ja.cfg  label_font.ko.cfg  label_font.zh_CN.cfg  language_name_font.cfg  languages.cfg  leaderboards.cfg  level-template.cfg  list-functions.cfg  music.cfg  music_settings.cfg  number_font.cfg  outline_font.cfg  outline_font.ja.cfg  (+14 more)
data-old/: achievements.cfg  control_schemes.cfg  dialog_font.cfg  dialog_font.zh_CN.cfg  editor.cfg  fonts.cfg  fonts.ja.cfg  fonts.zh_CN.cfg  geometry-functions.cfg  gui.cfg  label_font.zh_CN.cfg  leaderboards.cfg  list-functions.cfg  music.cfg  outline_font.cfg  outline_font.zh_CN.cfg  time-functions.cfg
deprecated/: blasslybliss.cfg  level2.cfg  make-tileset-old.pl  shop2.cfg  village.cfg  village2.cfg
duxduo/: module.cfg
editor/: build.sh  build2.sh  main.cpp  ui_mainwindow.hpp  ui_mainwindow.ui
frogatto/: crevice-village-house-1.cfg  iOS_APP_STORE_METADATA
hex/: color_shift.py  make_sprites.py  module.cfg
iOS/: Frogatto-Info.plist  Frogatto_Prefix.pch  InfoPlist.strings  SDL_uikitappdelegate.mm  iTunesArtWork  release checklist.txt
music_aac/: Dungeon.m4a  ElderChief.m4a  FrogattoChill.m4a  FrogattoStage1.m4a  FrogattoTitle.m4a  MilgramChamber.m4a  MilgramSwagger.m4a  NeoTown.m4a  WorldMap.m4a  specialitem.m4a
music_aac_mini/: Milgram'sSwagger Final2.m4a  MilgramBossBattle.m4a  gunslingerAutomate.m4a
phydemo/: module.cfg
po/: Makefile  ar.po  be_BY.po  de.po  el.po  en.po  en_GB.po  eo.po  es.po  fr.po  frogatto.pot  hu_HU.po  id.po  it.po  ja.po  ko.po  ms_MY.po  mt.po  nl.po  pl.po  pt_BR.po  pt_PT.po  ru.po  sk.po  sv.po  tr.po  tt.po  zh_CN.po
regex/: c_regex_traits.cpp  cpp_regex_traits.cpp  cregex.cpp  fileiter.cpp  icu.cpp  posix_api.cpp  regex_traits_defaults.cpp  static_mutex.cpp  usinstances.cpp  w32_regex_traits.cpp  wc_regex_traits.cpp  wide_posix_api.cpp
secluded-isle/: module.cfg
sounds/: Royalty Free Notes.txt
src/: Appirater.h  Appirater.m  CMakeLists.txt  GBMusicTrack.h  GBMusicTrack.m  IMG_savepng.cpp  IMG_savepng.h  SConscript  SDLMain.h  SDLMain.m  SampleOFDelegate.h  SampleOFDelegate.mm  achievements.cpp  achievements.hpp  animation_creator.cpp  animation_creator.hpp  animation_preview_widget.cpp  animation_preview_widget.hpp  animation_widget.cpp  animation_widget.hpp  array_callable.hpp  asserts.cpp  asserts.hpp  b2d_ffl.cpp  b2d_ffl.hpp  background.cpp  background.hpp  background_task_pool.cpp  background_task_pool.hpp  bar_widget.cpp  bar_widget.hpp  base64.cpp  base64.hpp  blur.cpp  blur.hpp  border_widget.cpp  border_widget.hpp  button.cpp  button.hpp  character.cpp  (+432 more)
src/game/: achievements.hpp  asserts.hpp  border_widget.cpp  character_editor_dialog.hpp  checksum.cpp  checksum.hpp  code_editor_widget.hpp  compat.hpp  compress.hpp  controls.cpp  controls_dialog.cpp  controls_dialog.hpp  current_generator.cpp  custom_object.cpp  custom_object_callable.cpp  editor_dialogs.cpp  editor_formula_functions.cpp  editor_layers_dialog.hpp  editor_level_properties_dialog.hpp  editor_module_properties_dialog.cpp  editor_variable_info.cpp  filesystem.cpp  font.hpp  formula.cpp  formula_object.cpp  formula_object.hpp  formula_profiler.cpp  geometry.hpp  gles2.hpp  globals.cpp  graphical_font_label.cpp  graphical_font_label.hpp  grid_widget_fwd.hpp  group_property_editor_dialog.hpp  hex_object.cpp  hex_tile.hpp  hex_tileset_editor_dialog.hpp  http_server.hpp  joystick.cpp  json_parser.cpp  (+43 more)
src/lobby/: Makefile  asserts.hpp  client.cpp  client.hpp  connection.cpp  connection.hpp  connection_fwd.hpp  foreach.hpp  formatter.hpp  game_server_worker.cpp  game_server_worker.hpp  header.hpp  lobby-config.cfg  lobby.cpp  mime_types.cpp  mime_types.hpp  name.cpp  name.hpp  queue.hpp  reply.cpp  reply.hpp  request.hpp  request_handler.cpp  request_handler.hpp  request_parser.hpp  server.cpp  server.hpp  shared_data.cpp  shared_data.hpp  sqlite_wrapper.hpp  uri.hpp
src/lobby/html/: index.html
src/lobby/html/scripts/: lobby.js  sha1.js
src/lobby/html/styles/: jsdisabled.css  jsenabled.css  screen.css
src/server/: server.cpp  simple_wml.cpp  simple_wml.hpp
stellar_limit/: module.cfg
utils/: Useful Utilities.txt  bash_autocomplete.sh  bash_autocomplete_setup.sh  civ_import_land.py  civ_import_land.sh  convert_sounds.pl  count-coins.py  creole-to-markdown.py  ct-traingen.py  fflprof.pl  fml-ffl.xml  fml_font_cfg.treetop  fson-ffl.xml  generate-iOS-WAVs.sh  graph-levels-mainline.sh  graph-levels.pl  htmhtm.py  kitty-banner.xcf  level_music.pl  level_titles_dimensions.pl  list_of_stats_files_downloader.py  make-en-po.sh  make-gif.py  make-pot.sh  map-ropes.xcf  matrix-heat.py  old fson-ffl.xml  parse-metadata.py  property_convert_to_formula.rb  screenshot-all.ahk  (+6 more)
(+8933 files in other folders)
